# stig_converter

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  STIG_unclass.xsl  TestNewChecklist.csv  U_ASD_STIG_V5R1_Manual-xccdf.xml  U_Application_Security_Development_STIG_Mapping.csv  blank_checklist.ckl  ckl_to_csv.py  ckl_to_splunk.py  gistfile1.py  project1-example-checklist-20230406.csv  pyproject.toml  requirements.txt  stig-checklist-empty-20230327.csv  stig_checklist_empty.ckl  stig_converter.ipynb
.claude/: settings.local.json
.github/: AGENTS.md
data/: AppSecDevSTIGs_Markdown.md  Test_ASD_Checklist.ckl  Test_ASD_Checklist.cklb  Test_ASD_Checklist.csv  U_ASD_STIG_V6R4_Manual-xccdf.xml  U_CCI_List.xml  application_security_development.json  application_security_development.md  project1-example-checklist-20230406.csv  project1-example-checklist-20230406.json  stig_checklist-20230620.ckl  stig_checklist-20230620.csv  stig_checklist-20230620.json  stig_checklist-20230621.csv  stig_checklist-20230718.csv  stig_checklist-20240406.csv  stig_checklist-20250410.csv  stig_checklist-20250410.json  stig_checklist-20250411.csv  stig_checklist.json  stigviewer_checklist.json  test_checklist.json
scripts/: ckl_to_csv.py  ckl_to_json.py  csv_to_json.py  get_new_stigs.py  json_to_ckl.py  json_to_markdown.py  security_utils.py  stigviewer_to_markdown.py
src/: ckl_to_csv.py  stig_converter.py
stig_converter/: __init__.py  __main__.py  get_new_stigs.py  security_utils.py  stig_converter.py
tests/: blank_checklist-20230601.csv  blank_checklist-20230601.json  (+9 more)
(+22 files in other folders)
